Set up flexbox index.html

--- a/css/custom.css
+++ b/css/custom.css
@@ -44,6 +44,21 @@ body {
 	top: 60%; left: 32%;
 }
 
+.banner p{
+	position: absolute;
+	top: 60%; left: 32%;
+}
+
+.banner p{
+	position: absolute;
+	top: 60%; left: 32%;
+}
+
+.banner p{
+	position: absolute;
+	top: 60%; left: 32%;
+}
+
 .main-scroll {
 	font-family: 'Nothing You Could Do', cursive;
 	font-size: 1.7em;
