--- a/css/custom.css
+++ b/css/custom.css
@@ -139,6 +139,7 @@ body {
 */
 
 .content {
+	display:flex;
 	justify-content:center;
 	}
 	
@@ -153,6 +154,7 @@ body {
 }
 
 .para {
+	display: flex;
 	flex-direction:column;
 	justify-content:center;
 	align-items:center;
@@ -162,28 +164,29 @@ body {
 }
 
 .cell {
-	flex-basis:20%;
+	flex-basis:35%;
 	justify-content:center;
 	align-content:stretch;
 	height: 100px;
 }
 
 .john {
-	flex-basis: 20%;
+	flex-basis: 35%;
 	justify-content:center;
 	align-content: stretch;
 	height: 100px;
 }
 
 .vert {
-	flex-basis: 75%;
+	flex-basis: 65%;
 	justify-content: center;
 	align-content: center;
 	height:100%;
+	background-image: url('../images/Scroll Vertical.png') no-repeat;
 }
 
 .img {
-	max-width: 40%;
+	max-width: 60%;
 }
 	
 #fontepic {
