--- a/css/custom.css
+++ b/css/custom.css
@@ -12,6 +12,7 @@ body {
 	background-image: url('../images/Sic Semper Scroll.png') no-repeat;
 	background-position: 50% 50%;
 	position: relative;
+	box-shadow: 10px 10px 10px rgba(0,0,0,.5)
 	}
 
 .banner h1{
@@ -71,61 +72,8 @@ body {
 	font-family: 'Nothing You Could Do', cursive;
 	font-size: 1.7em;
 	line-height: 1.3em;
-/*	padding: 10px 8px;
-	margin: 10px 0px;
-	background-image: url('../images/Scroll Vertical.png') no-repeat;
-	background-position: 50% 50%;
-	position: relative;*/
-	}
-/*
-.main-scroll .p1 { 
-	text-align: center;
-	position: absolute;
-	margin-left: 20%;
-	margin-right: 20%;
-	top: 17%;
-	}
-	
-.main-scroll .p2 { 
-	text-align: center;
-	position: absolute;
-	margin-left: 20%;
-	margin-right: 20%;
-	top: 25%;
-	}
-	
-.main-scroll .p3 { 
-	text-align: center;
-	position: absolute;
-	margin-left: 20%;
-	margin-right: 20%;
-	top: 33%;
-	}
-	
-.main-scroll .p4 { 
-	text-align: center;
-	position: absolute;
-	margin-left: 45%;
-	margin-right: 20%;
-	top: 47%;
-	}
-	
-.main-scroll .p5 { 
-	text-align: center;
-	position: absolute;
-	margin-left: 20%;
-	margin-right: 20%;
-	top: 52%;
-	}
-	
-.main-scroll .p6 { 
-	text-align: center;
-	position: absolute;
-	margin-left: 20%;
-	margin-right: 20%;
-	top: 64%;
-	}
-*/
+} 
+
 .contactform {
 	font-family: 'Nothing You Could Do', cursive;
 	font-size: 1.7em;
@@ -135,7 +83,7 @@ body {
 	background-image: url('../images/Scroll Vertical.png') no-repeat;
 	background-position: 50% 50%;
 	position: relative;
-	}
+}
 
 .formgroupname {
 	text-align: center;
@@ -143,12 +91,12 @@ body {
 	margin-left: 10%;
 	margin-right: 10%;
 	top: 15%
-	}
+}
 
 .content {
 	display:flex;
 	justify-content:center;
-	}
+}
 	
 .row {
 	display:flex;
@@ -169,22 +117,22 @@ ul {
 	padding-left:20%;
 }
 
+ul nth-child(1){
+	padding-top: 30px;
+}
 li {
 	max-width: 80%;
 	item-align: center;
 	font-size: 1em;
+	white-space: pre;
+	/*text-shadow: 2px 2px 3px rgba(0,0,0,.5);*/
+	padding-left: 0;
+	padding-right: 0;
+	margin-left: 0;
+	margin-right:0;
+	flex-grow: 0;
+	flex-shrink: 1;
 }
-/*
-.para {
-	display: flex;
-	flex-direction:column;
-	justify-content:center;
-	align-items:center;
-	flex-wrap:wrap;
-	height:150%;
-	width: 100%;
-}
-*/
 
 .cell {
 	flex-basis:75%;
@@ -194,18 +142,12 @@ li {
 	width: 100%;
 }
 
-.john {/*
-	flex-basis: 25%;
-	justify-content:center;
-	align-content: stretch;
-	height: 100px;*/
-}
-
 .vert {
 	flex-basis: 75%;
 	justify-content: center;
 	align-content: center;
-	height:100%;
+	height:150%;
+	max-height: 560px;
 	background-image: url('../images/Scroll Vertical.png');
 	background-size: 100%;
 	background-repeat: no-repeat;
@@ -213,39 +155,52 @@ li {
 
 .para-scrollbar {
 	flex-basis:75%;
-	height: 100px;
+	height: 120px;
 	opacity: 0;
 }
 
+.john  {
+	padding: 1.5%;
+}
+
 .img {
+	padding: 4px;
 	max-width: 40%;
 	float: right;
+	box-shadow: 7px 7px 7px rgba(5,5,5,.5)
 }
 	
 #fontepic {
 	font-family: 'toyland_nfregular';
-	font-size: 1.1em;
-	}
+	font-size: 1em;
+	text-shadow: 2px 2px 3px #777777;
+}
 
 #ages {
     font-family: 'vikingregular';
 	font-size: .8em;
-	}
+}
 	
 #master {
     font-family: 'blackchanceryregular';
 	font-size: 1.1em;
-	}
+}
 
 #sidebar {
 	line-height: 1.2em;
-	}
-	
+}
+/*	
 #sidebar h1 {
 	text-align: center;
-	}
+}
+*/
+#ido  {
+	line-height: 1em;
+    font-family: 'sf_foxboro_scriptregular';
+	font-size: 1.4em;
+}
 
-#sidebar , #ido, #john{
+#sidebar , #john{
     font-family: 'sf_foxboro_scriptregular';
 	font-size: 1.75em;
 }
@@ -254,7 +209,7 @@ li {
 	float: right;
 	max-width: 30%;
 	margin: 10px;
-	}
+}
 
 @font-face {
     font-family: 'atlas_of_the_magiregular';
@@ -266,7 +221,6 @@ li {
          url('../fonts/atlas_of_the_magi-webfont.svg#atlas_of_the_magiregular') format('svg');
     font-weight: normal;
     font-style: normal;
-
 }
 	
 @font-face {
@@ -279,7 +233,7 @@ li {
          url('../fonts/toyland-outlinea.regular.svg#toyland_nfregular') format('svg');
     font-weight: normal;
     font-style: normal;
-	}
+}
 
 @font-face {
     font-family: 'vikingregular';
