before navigation bar

--- a/css/custom.css
+++ b/css/custom.css
@@ -3,6 +3,10 @@ body {
 	background: url('../images/marble.jpg') no-repeat center top scroll;
 	}
 
+.container{
+	width: 100%;
+}
+
 .banner {
 	font-family: 'atlas_of_the_magiregular', cursive;
 	font-size: 1.7em;
@@ -147,7 +151,7 @@ li {
 	justify-content: center;
 	align-content: center;
 	height:150%;
-	max-height: 560px;
+	max-height: 800px;
 	background-image: url('../images/Scroll Vertical.png');
 	background-size: 100%;
 	background-repeat: no-repeat;
@@ -209,6 +213,7 @@ li {
 	float: right;
 	max-width: 30%;
 	margin: 10px;
+	padding-top: 70px;
 }
 
 @font-face {
