--- a/css/navbar.css
+++ b/css/navbar.css
@@ -4,9 +4,10 @@
 	justify-content: space-between;
 }
 
-.navcell a {
-	
+.navbar > .flex-navbar > a {
+	color: red;
 }
+
 .navbar-brand {
 	flex-grow:1;
 }
@@ -24,4 +25,8 @@
 	display: flex;
 	justify-content: flex-end;
 	flex-grow: 1;
+}
+
+.flex-navbar a {
+	color: #550000;
 }
